# jam-template

./: Cargo.toml  LICENSE
.github/workflows/: release.yml
src/: main.rs
