[package]
name = "jam-template" # CHANGE TO NAME OF REPO!
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15.3", features = [] }

[features]
default = ["bevy/dynamic_linking"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 0

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
